# codexbar-gnome

./: .gitignore  CONTRIBUTING.md  README.md  build.sh  cookie_importer.py  extension.js  install.sh  log_window.js  metadata.json  prefs.js  secret.js  stylesheet.css  test_all_providers.js  usageApi.js
adapters/: AntigravityLocalFetcher.js  CliSubprocessFetcher.js  OllamaSettingsFetcher.js  SoupApiFetcher.js
cookie_importer_package/: LICENSE  README.md  pyproject.toml
cookie_importer_package/src/codexbar_cookie_importer/: __init__.py  __main__.py  importer.py
cookie_importer_package/src/codexbar_cookie_importer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
core/ports/: UsageFetcher.js
schemas/: org.gnome.shell.extensions.codexbar.gschema.xml
